--- a/supply-chain/config.toml
+++ b/supply-chain/config.toml
@@ -4,416 +4,420 @@
 [cargo-vet]
 version = "0.10"
 
+[policy.gtk-rs-audit]
+criteria = "safe-to-run"
+notes = "For desktop applications with little no to external exposure safe-to-run should usally be sufficient."
+
 [[exemptions.aho-corasick]]
 version = "1.1.3"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.autocfg]]
 version = "1.4.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.bitflags]]
 version = "2.6.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.block]]
 version = "0.1.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.cairo-rs]]
 version = "0.20.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.cairo-sys-rs]]
 version = "0.20.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.cc]]
 version = "1.1.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.cfg-expr]]
 version = "0.17.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.equivalent]]
 version = "1.0.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.field-offset]]
 version = "0.3.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-channel]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-core]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-executor]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-io]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-macro]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-task]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.futures-util]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.gdk-pixbuf]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gdk-pixbuf-sys]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gdk4]]
 version = "0.9.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gdk4-sys]]
 version = "0.9.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gettext-rs]]
 version = "0.7.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.gettext-sys]]
 version = "0.22.5"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.gio]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gio-sys]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.glib]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.glib-macros]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.glib-sys]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gobject-sys]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.graphene-rs]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.graphene-sys]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gsk4]]
 version = "0.9.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gsk4-sys]]
 version = "0.9.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gtk4]]
 version = "0.9.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gtk4-macros]]
 version = "0.9.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.gtk4-sys]]
 version = "0.9.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.hashbrown]]
 version = "0.15.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.heck]]
 version = "0.5.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.indexmap]]
 version = "2.6.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.lazy_static]]
 version = "1.5.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.libadwaita]]
 version = "0.7.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.libadwaita-sys]]
 version = "0.7.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.libc]]
 version = "0.2.161"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.locale_config]]
 version = "0.3.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.malloc_buf]]
 version = "0.0.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.memchr]]
 version = "2.7.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.memoffset]]
 version = "0.9.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.objc]]
 version = "0.2.7"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.objc-foundation]]
 version = "0.1.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.objc_id]]
 version = "0.1.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.pango]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.pango-sys]]
 version = "0.20.4"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 suggest = false
 notes = "Do not audit gtk-rs itself, but just its dependencies"
 
 [[exemptions.pin-project-lite]]
 version = "0.2.15"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.pin-utils]]
 version = "0.1.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.pkg-config]]
 version = "0.3.31"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.proc-macro-crate]]
 version = "3.2.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.proc-macro2]]
 version = "1.0.89"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.quote]]
 version = "1.0.37"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.regex]]
 version = "1.11.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.regex-automata]]
 version = "0.4.8"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.regex-syntax]]
 version = "0.8.5"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.rustc_version]]
 version = "0.4.1"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.semver]]
 version = "1.0.23"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.serde]]
 version = "1.0.213"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.serde_derive]]
 version = "1.0.213"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.serde_spanned]]
 version = "0.6.8"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.shlex]]
 version = "1.3.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.slab]]
 version = "0.4.9"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.smallvec]]
 version = "1.13.2"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.syn]]
 version = "2.0.85"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.system-deps]]
 version = "7.0.3"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.target-lexicon]]
 version = "0.12.16"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.temp-dir]]
 version = "0.1.14"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.toml]]
 version = "0.8.19"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.toml_datetime]]
 version = "0.6.8"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.toml_edit]]
 version = "0.22.22"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.unicode-ident]]
 version = "1.0.13"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.version-compare]]
 version = "0.2.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.winapi]]
 version = "0.3.9"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.winapi-i686-pc-windows-gnu]]
 version = "0.4.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.winapi-x86_64-pc-windows-gnu]]
 version = "0.4.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows-sys]]
 version = "0.52.0"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows-targets]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_aarch64_gnullvm]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_aarch64_msvc]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_i686_gnu]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_i686_gnullvm]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_i686_msvc]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_x86_64_gnu]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_x86_64_gnullvm]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.windows_x86_64_msvc]]
 version = "0.52.6"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
 
 [[exemptions.winnow]]
 version = "0.6.20"
-criteria = "safe-to-deploy"
+criteria = "safe-to-run"
