--- a/supply-chain/config.toml
+++ b/supply-chain/config.toml
@@ -7,6 +7,9 @@ version = "0.10"
 [imports.google]
 url = "https://raw.githubusercontent.com/google/supply-chain/main/audits.toml"
 
+[imports.mozilla]
+url = "https://raw.githubusercontent.com/mozilla/supply-chain/main/audits.toml"
+
 [policy.gtk-rs-audit]
 criteria = "safe-to-run"
 notes = "For desktop applications with little no to external exposure safe-to-run should usally be sufficient."
@@ -183,10 +186,6 @@ criteria = "safe-to-run"
 
 [[exemptions.locale_config]]
 version = "0.3.0"
-criteria = "safe-to-run"
-
-[[exemptions.malloc_buf]]
-version = "0.0.6"
 criteria = "safe-to-run"
 
 [[exemptions.memchr]]
